--- a/violet/violet.vcxproj
+++ b/violet/violet.vcxproj
@@ -178,35 +178,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Blocks_Definitions.h" />
-    <ClInclude Include="Character.h" />
+    <ClInclude Include="Definitions.h" />
     <ClInclude Include="Engine.h" />
-    <ClInclude Include="Landscape.h" />
-    <ClInclude Include="Chunk.h" />
-    <ClInclude Include="Light.h" />
-    <ClInclude Include="Material.h" />
-    <ClInclude Include="PerlinNoise.h" />
     <ClInclude Include="PlatformDefinitions.h" />
-    <ClInclude Include="Primes.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Statistics.h" />
     <ClInclude Include="Threads.h" />
-    <ClInclude Include="World.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Character.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Violet.cpp" />
-    <ClCompile Include="Landscape.cpp" />
-    <ClCompile Include="Chunk.cpp" />
-    <ClCompile Include="Light.cpp" />
-    <ClCompile Include="Material.cpp" />
-    <ClCompile Include="PerlinNoise.cpp" />
     <ClCompile Include="PlatformDefinitions.cpp" />
-    <ClCompile Include="Primes.cpp" />
     <ClCompile Include="Statistics.cpp" />
     <ClCompile Include="Threads.cpp" />
-    <ClCompile Include="World.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="violet.rc" />
