--- a/violet/violet.vcxproj.filters
+++ b/violet/violet.vcxproj.filters
@@ -12,42 +12,12 @@
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
-    <Filter Include="Source\Landscape">
-      <UniqueIdentifier>{378c1672-cc92-4eb6-b384-5147182f82d8}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Headers\Landscape">
-      <UniqueIdentifier>{34dfc710-00f3-4157-84df-e039a325e687}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Character.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Material.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="World.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Landscape.cpp">
-      <Filter>Source\Landscape</Filter>
-    </ClCompile>
-    <ClCompile Include="PerlinNoise.cpp">
-      <Filter>Source\Landscape</Filter>
-    </ClCompile>
-    <ClCompile Include="Primes.cpp">
-      <Filter>Source\Landscape</Filter>
-    </ClCompile>
-    <ClCompile Include="Chunk.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
     <ClCompile Include="Engine.cpp">
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="Threads.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Light.cpp">
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="Statistics.cpp">
@@ -61,31 +31,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Character.h">
-      <Filter>Headers</Filter>
-    </ClInclude>
     <ClInclude Include="resource.h">
-      <Filter>Headers</Filter>
-    </ClInclude>
-    <ClInclude Include="Material.h">
-      <Filter>Headers</Filter>
-    </ClInclude>
-    <ClInclude Include="Blocks_Definitions.h">
-      <Filter>Headers</Filter>
-    </ClInclude>
-    <ClInclude Include="World.h">
-      <Filter>Headers</Filter>
-    </ClInclude>
-    <ClInclude Include="PerlinNoise.h">
-      <Filter>Headers\Landscape</Filter>
-    </ClInclude>
-    <ClInclude Include="Landscape.h">
-      <Filter>Headers\Landscape</Filter>
-    </ClInclude>
-    <ClInclude Include="Primes.h">
-      <Filter>Headers\Landscape</Filter>
-    </ClInclude>
-    <ClInclude Include="Chunk.h">
       <Filter>Headers</Filter>
     </ClInclude>
     <ClInclude Include="Engine.h">
@@ -94,13 +40,13 @@
     <ClInclude Include="Threads.h">
       <Filter>Headers</Filter>
     </ClInclude>
-    <ClInclude Include="Light.h">
-      <Filter>Headers</Filter>
-    </ClInclude>
     <ClInclude Include="Statistics.h">
       <Filter>Headers</Filter>
     </ClInclude>
     <ClInclude Include="PlatformDefinitions.h">
+      <Filter>Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="Definitions.h">
       <Filter>Headers</Filter>
     </ClInclude>
   </ItemGroup>
