--- a/violet/violet.vcxproj
+++ b/violet/violet.vcxproj
@@ -178,15 +178,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="comport.h" />
     <ClInclude Include="Definitions.h" />
     <ClInclude Include="Engine.h" />
+    <ClInclude Include="Interface.h" />
     <ClInclude Include="PlatformDefinitions.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Statistics.h" />
     <ClInclude Include="Threads.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="comport.cpp" />
     <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="Interface.cpp" />
     <ClCompile Include="Violet.cpp" />
     <ClCompile Include="PlatformDefinitions.cpp" />
     <ClCompile Include="Statistics.cpp" />
