--- a/pc/violet/violet.vcxproj
+++ b/pc/violet/violet.vcxproj
@@ -66,8 +66,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\dev\libs\projects\boost_1_48_0;C:\dev\libs\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\dev\libs\projects\boost_1_48_0\stage\lib;C:\dev\libs\dll;C:\dev\libs\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\dev\libs\projects\boost_1_48_0;C:\dev\libs\include;$(OPENCV_DIR)\include</IncludePath>
+    <LibraryPath>C:\dev\libs\projects\boost_1_48_0\stage\lib;C:\dev\libs\lib;$(OPENCV_DIR)\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
@@ -76,8 +76,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>C:\dev\libs\projects\boost_1_48_0;C:\dev\libs\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\dev\libs\projects\boost_1_48_0\stage\lib;C:\dev\libs\dll;C:\dev\libs\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\dev\libs\projects\boost_1_48_0;C:\dev\libs\include;$(OPENCV_DIR)\include</IncludePath>
+    <LibraryPath>C:\dev\libs\projects\boost_1_48_0\stage\lib;C:\dev\libs\lib;$(OPENCV_DIR)\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
@@ -104,6 +104,7 @@
       <AdditionalOptions>
       </AdditionalOptions>
       <AdditionalLibraryDirectories>C:\dev\libs\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opencv_core243d.lib;opencv_highgui243d.lib;opencv_imgproc243d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -151,6 +152,7 @@
       <AdditionalLibraryDirectories>C:\dev\libs\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalOptions>
       </AdditionalOptions>
+      <AdditionalDependencies>opencv_core243.lib;opencv_highgui243.lib;opencv_imgproc243.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
