--- a/pc/violet/violet.vcxproj.filters
+++ b/pc/violet/violet.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClCompile Include="HUD.cpp">
       <Filter>Source</Filter>
     </ClCompile>
+    <ClCompile Include="CamField.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -56,6 +59,9 @@
       <Filter>Headers</Filter>
     </ClInclude>
     <ClInclude Include="HUD.h">
+      <Filter>Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="CamField.h">
       <Filter>Headers</Filter>
     </ClInclude>
   </ItemGroup>
